--- a/scss/style.css
+++ b/scss/style.css
@@ -20,7 +20,7 @@
   --white: #fff;
   --gray: #6c757d;
   --gray-dark: #343a40;
-  --primary: #002fff;
+  --primary: #BF9B30;
   --secondary: #000000;
   --success: #28a745;
   --info: #17a2b8;
@@ -155,12 +155,12 @@ sup {
 }
 
 a {
-  color: #002fff;
+  color: #BF9B30;
   text-decoration: none;
   background-color: transparent;
 }
 a:hover {
-  color: #0021b3;
+  color: #826921;
   text-decoration: underline;
 }
 
@@ -1746,21 +1746,21 @@ pre code {
 .table-primary,
 .table-primary > th,
 .table-primary > td {
-  background-color: #b8c5ff;
+  background-color: #ede3c5;
 }
 .table-primary th,
 .table-primary td,
 .table-primary thead th,
 .table-primary tbody + tbody {
-  border-color: #7a93ff;
+  border-color: #decb93;
 }
 
 .table-hover .table-primary:hover {
-  background-color: #9fb0ff;
+  background-color: #e7dab2;
 }
 .table-hover .table-primary:hover > td,
 .table-hover .table-primary:hover > th {
-  background-color: #9fb0ff;
+  background-color: #e7dab2;
 }
 
 .table-secondary,
@@ -2033,9 +2033,9 @@ pre code {
 .form-control:focus {
   color: #495057;
   background-color: #fff;
-  border-color: #8097ff;
+  border-color: #e2cd8c;
   outline: 0;
-  box-shadow: 0 0 0 0.2rem rgba(0, 47, 255, 0.25);
+  box-shadow: 0 0 0 0.2rem rgba(191, 155, 48, 0.25);
 }
 .form-control::-moz-placeholder {
   color: #6c757d;
@@ -2458,7 +2458,7 @@ textarea.form-control {
 }
 .btn:focus, .btn.focus {
   outline: 0;
-  box-shadow: 0 0 0 0.2rem rgba(0, 47, 255, 0.25);
+  box-shadow: 0 0 0 0.2rem rgba(191, 155, 48, 0.25);
 }
 .btn.disabled, .btn:disabled {
   opacity: 0.65;
@@ -2472,33 +2472,33 @@ fieldset:disabled a.btn {
 }
 
 .btn-primary {
-  color: #fff;
-  background-color: #002fff;
-  border-color: #002fff;
+  color: #212529;
+  background-color: #BF9B30;
+  border-color: #BF9B30;
 }
 .btn-primary:hover {
   color: #fff;
-  background-color: #0028d9;
-  border-color: #0026cc;
+  background-color: #a08228;
+  border-color: #967a26;
 }
 .btn-primary:focus, .btn-primary.focus {
   color: #fff;
-  background-color: #0028d9;
-  border-color: #0026cc;
-  box-shadow: 0 0 0 0.2rem rgba(38, 78, 255, 0.5);
+  background-color: #a08228;
+  border-color: #967a26;
+  box-shadow: 0 0 0 0.2rem rgba(167, 137, 47, 0.5);
 }
 .btn-primary.disabled, .btn-primary:disabled {
-  color: #fff;
-  background-color: #002fff;
-  border-color: #002fff;
+  color: #212529;
+  background-color: #BF9B30;
+  border-color: #BF9B30;
 }
 .btn-primary:not(:disabled):not(.disabled):active, .btn-primary:not(:disabled):not(.disabled).active, .show > .btn-primary.dropdown-toggle {
   color: #fff;
-  background-color: #0026cc;
-  border-color: #0023bf;
+  background-color: #967a26;
+  border-color: #8c7223;
 }
 .btn-primary:not(:disabled):not(.disabled):active:focus, .btn-primary:not(:disabled):not(.disabled).active:focus, .show > .btn-primary.dropdown-toggle:focus {
-  box-shadow: 0 0 0 0.2rem rgba(38, 78, 255, 0.5);
+  box-shadow: 0 0 0 0.2rem rgba(167, 137, 47, 0.5);
 }
 
 .btn-secondary {
@@ -2712,28 +2712,28 @@ fieldset:disabled a.btn {
 }
 
 .btn-outline-primary {
-  color: #002fff;
-  border-color: #002fff;
+  color: #BF9B30;
+  border-color: #BF9B30;
 }
 .btn-outline-primary:hover {
-  color: #fff;
-  background-color: #002fff;
-  border-color: #002fff;
+  color: #212529;
+  background-color: #BF9B30;
+  border-color: #BF9B30;
 }
 .btn-outline-primary:focus, .btn-outline-primary.focus {
-  box-shadow: 0 0 0 0.2rem rgba(0, 47, 255, 0.5);
+  box-shadow: 0 0 0 0.2rem rgba(191, 155, 48, 0.5);
 }
 .btn-outline-primary.disabled, .btn-outline-primary:disabled {
-  color: #002fff;
+  color: #BF9B30;
   background-color: transparent;
 }
 .btn-outline-primary:not(:disabled):not(.disabled):active, .btn-outline-primary:not(:disabled):not(.disabled).active, .show > .btn-outline-primary.dropdown-toggle {
-  color: #fff;
-  background-color: #002fff;
-  border-color: #002fff;
+  color: #212529;
+  background-color: #BF9B30;
+  border-color: #BF9B30;
 }
 .btn-outline-primary:not(:disabled):not(.disabled):active:focus, .btn-outline-primary:not(:disabled):not(.disabled).active:focus, .show > .btn-outline-primary.dropdown-toggle:focus {
-  box-shadow: 0 0 0 0.2rem rgba(0, 47, 255, 0.5);
+  box-shadow: 0 0 0 0.2rem rgba(191, 155, 48, 0.5);
 }
 
 .btn-outline-secondary {
@@ -2913,11 +2913,11 @@ fieldset:disabled a.btn {
 
 .btn-link {
   font-weight: 400;
-  color: #002fff;
+  color: #BF9B30;
   text-decoration: none;
 }
 .btn-link:hover {
-  color: #0021b3;
+  color: #826921;
   text-decoration: underline;
 }
 .btn-link:focus, .btn-link.focus {
@@ -3189,7 +3189,7 @@ input[type=button].btn-block {
 .dropdown-item.active, .dropdown-item:active {
   color: #fff;
   text-decoration: none;
-  background-color: #002fff;
+  background-color: #BF9B30;
 }
 .dropdown-item.disabled, .dropdown-item:disabled {
   color: #6c757d;
@@ -3454,19 +3454,19 @@ input[type=button].btn-block {
 }
 .custom-control-input:checked ~ .custom-control-label::before {
   color: #fff;
-  border-color: #002fff;
-  background-color: #002fff;
+  border-color: #BF9B30;
+  background-color: #BF9B30;
 }
 .custom-control-input:focus ~ .custom-control-label::before {
-  box-shadow: 0 0 0 0.2rem rgba(0, 47, 255, 0.25);
+  box-shadow: 0 0 0 0.2rem rgba(191, 155, 48, 0.25);
 }
 .custom-control-input:focus:not(:checked) ~ .custom-control-label::before {
-  border-color: #8097ff;
+  border-color: #e2cd8c;
 }
 .custom-control-input:not(:disabled):active ~ .custom-control-label::before {
   color: #fff;
-  background-color: #b3c1ff;
-  border-color: #b3c1ff;
+  background-color: #ecdeb5;
+  border-color: #ecdeb5;
 }
 .custom-control-input[disabled] ~ .custom-control-label, .custom-control-input:disabled ~ .custom-control-label {
   color: #6c757d;
@@ -3507,17 +3507,17 @@ input[type=button].btn-block {
   background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' width='8' height='8' viewBox='0 0 8 8'%3e%3cpath fill='%23fff' d='M6.564.75l-3.59 3.612-1.538-1.55L0 4.26l2.974 2.99L8 2.193z'/%3e%3c/svg%3e");
 }
 .custom-checkbox .custom-control-input:indeterminate ~ .custom-control-label::before {
-  border-color: #002fff;
-  background-color: #002fff;
+  border-color: #BF9B30;
+  background-color: #BF9B30;
 }
 .custom-checkbox .custom-control-input:indeterminate ~ .custom-control-label::after {
   background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' width='4' height='4' viewBox='0 0 4 4'%3e%3cpath stroke='%23fff' d='M0 2h4'/%3e%3c/svg%3e");
 }
 .custom-checkbox .custom-control-input:disabled:checked ~ .custom-control-label::before {
-  background-color: rgba(0, 47, 255, 0.5);
+  background-color: rgba(191, 155, 48, 0.5);
 }
 .custom-checkbox .custom-control-input:disabled:indeterminate ~ .custom-control-label::before {
-  background-color: rgba(0, 47, 255, 0.5);
+  background-color: rgba(191, 155, 48, 0.5);
 }
 
 .custom-radio .custom-control-label::before {
@@ -3527,7 +3527,7 @@ input[type=button].btn-block {
   background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' width='12' height='12' viewBox='-4 -4 8 8'%3e%3ccircle r='3' fill='%23fff'/%3e%3c/svg%3e");
 }
 .custom-radio .custom-control-input:disabled:checked ~ .custom-control-label::before {
-  background-color: rgba(0, 47, 255, 0.5);
+  background-color: rgba(191, 155, 48, 0.5);
 }
 
 .custom-switch {
@@ -3558,7 +3558,7 @@ input[type=button].btn-block {
   transform: translateX(0.75rem);
 }
 .custom-switch .custom-control-input:disabled:checked ~ .custom-control-label::before {
-  background-color: rgba(0, 47, 255, 0.5);
+  background-color: rgba(191, 155, 48, 0.5);
 }
 
 .custom-select {
@@ -3579,9 +3579,9 @@ input[type=button].btn-block {
           appearance: none;
 }
 .custom-select:focus {
-  border-color: #8097ff;
+  border-color: #e2cd8c;
   outline: 0;
-  box-shadow: 0 0 0 0.2rem rgba(0, 47, 255, 0.25);
+  box-shadow: 0 0 0 0.2rem rgba(191, 155, 48, 0.25);
 }
 .custom-select:focus::-ms-value {
   color: #495057;
@@ -3637,8 +3637,8 @@ input[type=button].btn-block {
   opacity: 0;
 }
 .custom-file-input:focus ~ .custom-file-label {
-  border-color: #8097ff;
-  box-shadow: 0 0 0 0.2rem rgba(0, 47, 255, 0.25);
+  border-color: #e2cd8c;
+  box-shadow: 0 0 0 0.2rem rgba(191, 155, 48, 0.25);
 }
 .custom-file-input[disabled] ~ .custom-file-label, .custom-file-input:disabled ~ .custom-file-label {
   background-color: #e9ecef;
@@ -3693,13 +3693,13 @@ input[type=button].btn-block {
   outline: none;
 }
 .custom-range:focus::-webkit-slider-thumb {
-  box-shadow: 0 0 0 1px #fff, 0 0 0 0.2rem rgba(0, 47, 255, 0.25);
+  box-shadow: 0 0 0 1px #fff, 0 0 0 0.2rem rgba(191, 155, 48, 0.25);
 }
 .custom-range:focus::-moz-range-thumb {
-  box-shadow: 0 0 0 1px #fff, 0 0 0 0.2rem rgba(0, 47, 255, 0.25);
+  box-shadow: 0 0 0 1px #fff, 0 0 0 0.2rem rgba(191, 155, 48, 0.25);
 }
 .custom-range:focus::-ms-thumb {
-  box-shadow: 0 0 0 1px #fff, 0 0 0 0.2rem rgba(0, 47, 255, 0.25);
+  box-shadow: 0 0 0 1px #fff, 0 0 0 0.2rem rgba(191, 155, 48, 0.25);
 }
 .custom-range::-moz-focus-outer {
   border: 0;
@@ -3708,7 +3708,7 @@ input[type=button].btn-block {
   width: 1rem;
   height: 1rem;
   margin-top: -0.25rem;
-  background-color: #002fff;
+  background-color: #BF9B30;
   border: 0;
   -webkit-transition: background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
   transition: background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
@@ -3722,7 +3722,7 @@ input[type=button].btn-block {
   }
 }
 .custom-range::-webkit-slider-thumb:active {
-  background-color: #b3c1ff;
+  background-color: #ecdeb5;
 }
 .custom-range::-webkit-slider-runnable-track {
   width: 100%;
@@ -3735,7 +3735,7 @@ input[type=button].btn-block {
 .custom-range::-moz-range-thumb {
   width: 1rem;
   height: 1rem;
-  background-color: #002fff;
+  background-color: #BF9B30;
   border: 0;
   -moz-transition: background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
   transition: background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
@@ -3749,7 +3749,7 @@ input[type=button].btn-block {
   }
 }
 .custom-range::-moz-range-thumb:active {
-  background-color: #b3c1ff;
+  background-color: #ecdeb5;
 }
 .custom-range::-moz-range-track {
   width: 100%;
@@ -3765,7 +3765,7 @@ input[type=button].btn-block {
   margin-top: 0;
   margin-right: 0.2rem;
   margin-left: 0.2rem;
-  background-color: #002fff;
+  background-color: #BF9B30;
   border: 0;
   -ms-transition: background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
   transition: background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
@@ -3778,7 +3778,7 @@ input[type=button].btn-block {
   }
 }
 .custom-range::-ms-thumb:active {
-  background-color: #b3c1ff;
+  background-color: #ecdeb5;
 }
 .custom-range::-ms-track {
   width: 100%;
@@ -3876,7 +3876,7 @@ input[type=button].btn-block {
 .nav-pills .nav-link.active,
 .nav-pills .show > .nav-link {
   color: #fff;
-  background-color: #002fff;
+  background-color: #BF9B30;
 }
 
 .nav-fill > .nav-link,
@@ -4467,13 +4467,13 @@ input[type=button].btn-block {
   padding: 0.5rem 0.75rem;
   margin-left: -1px;
   line-height: 1.25;
-  color: #002fff;
+  color: #BF9B30;
   background-color: #fff;
   border: 1px solid #dee2e6;
 }
 .page-link:hover {
   z-index: 2;
-  color: #0021b3;
+  color: #826921;
   text-decoration: none;
   background-color: #e9ecef;
   border-color: #dee2e6;
@@ -4481,7 +4481,7 @@ input[type=button].btn-block {
 .page-link:focus {
   z-index: 3;
   outline: 0;
-  box-shadow: 0 0 0 0.2rem rgba(0, 47, 255, 0.25);
+  box-shadow: 0 0 0 0.2rem rgba(191, 155, 48, 0.25);
 }
 
 .page-item:first-child .page-link {
@@ -4490,8 +4490,8 @@ input[type=button].btn-block {
 .page-item.active .page-link {
   z-index: 3;
   color: #fff;
-  background-color: #002fff;
-  border-color: #002fff;
+  background-color: #BF9B30;
+  border-color: #BF9B30;
 }
 .page-item.disabled .page-link {
   color: #6c757d;
@@ -4546,16 +4546,16 @@ a.badge:hover, a.badge:focus {
 }
 
 .badge-primary {
-  color: #fff;
-  background-color: #002fff;
+  color: #212529;
+  background-color: #BF9B30;
 }
 a.badge-primary:hover, a.badge-primary:focus {
-  color: #fff;
-  background-color: #0026cc;
+  color: #212529;
+  background-color: #967a26;
 }
 a.badge-primary:focus, a.badge-primary.focus {
   outline: 0;
-  box-shadow: 0 0 0 0.2rem rgba(0, 47, 255, 0.5);
+  box-shadow: 0 0 0 0.2rem rgba(191, 155, 48, 0.5);
 }
 
 .badge-secondary {
@@ -4693,15 +4693,15 @@ a.badge-dark:focus, a.badge-dark.focus {
 }
 
 .alert-primary {
-  color: #001885;
-  background-color: #ccd5ff;
-  border-color: #b8c5ff;
+  color: #635119;
+  background-color: #f2ebd6;
+  border-color: #ede3c5;
 }
 .alert-primary hr {
-  border-top-color: #9fb0ff;
+  border-top-color: #e7dab2;
 }
 .alert-primary .alert-link {
-  color: #000f52;
+  color: #3a300f;
 }
 
 .alert-secondary {
@@ -4822,7 +4822,7 @@ a.badge-dark:focus, a.badge-dark.focus {
   color: #fff;
   text-align: center;
   white-space: nowrap;
-  background-color: #002fff;
+  background-color: #BF9B30;
   transition: width 0.6s ease;
 }
 @media (prefers-reduced-motion: reduce) {
@@ -4894,8 +4894,8 @@ a.badge-dark:focus, a.badge-dark.focus {
 .list-group-item.active {
   z-index: 2;
   color: #fff;
-  background-color: #002fff;
-  border-color: #002fff;
+  background-color: #BF9B30;
+  border-color: #BF9B30;
 }
 .list-group-item + .list-group-item {
   border-top-width: 0;
@@ -4992,17 +4992,17 @@ a.badge-dark:focus, a.badge-dark.focus {
 }
 
 .list-group-item-primary {
-  color: #001885;
-  background-color: #b8c5ff;
+  color: #635119;
+  background-color: #ede3c5;
 }
 .list-group-item-primary.list-group-item-action:hover, .list-group-item-primary.list-group-item-action:focus {
-  color: #001885;
-  background-color: #9fb0ff;
+  color: #635119;
+  background-color: #e7dab2;
 }
 .list-group-item-primary.list-group-item-action.active {
   color: #fff;
-  background-color: #001885;
-  border-color: #001885;
+  background-color: #635119;
+  border-color: #635119;
 }
 
 .list-group-item-secondary {
@@ -5876,13 +5876,13 @@ a.close.disabled {
 }
 
 .bg-primary {
-  background-color: #002fff !important;
+  background-color: #BF9B30 !important;
 }
 
 a.bg-primary:hover, a.bg-primary:focus,
 button.bg-primary:hover,
 button.bg-primary:focus {
-  background-color: #0026cc !important;
+  background-color: #967a26 !important;
 }
 
 .bg-secondary {
@@ -6004,7 +6004,7 @@ button.bg-dark:focus {
 }
 
 .border-primary {
-  border-color: #002fff !important;
+  border-color: #BF9B30 !important;
 }
 
 .border-secondary {
@@ -9577,11 +9577,11 @@ button.bg-dark:focus {
 }
 
 .text-primary {
-  color: #002fff !important;
+  color: #BF9B30 !important;
 }
 
 a.text-primary:hover, a.text-primary:focus {
-  color: #0021b3 !important;
+  color: #826921 !important;
 }
 
 .text-secondary {
@@ -9840,7 +9840,7 @@ h6,
 
 .navbar-dark .navbar-nav .nav-link:hover,
 .navbar-dark .navbar-nav .nav-link.active {
-  color: #002fff;
+  color: #BF9B30;
 }
 
 @media (max-width: 991.98px) {
@@ -9903,7 +9903,7 @@ h6,
 }
 
 .carousel-indicators .active {
-  background-color: #002fff;
+  background-color: #BF9B30;
 }
 
 @media (max-width: 991.98px) {
@@ -9982,7 +9982,7 @@ h6,
 
 .team-carousel .owl-dot.active,
 .testimonial-carousel .owl-dot.active {
-  background: #002fff;
+  background: #BF9B30;
 }
 
 .team-item .team-overlay {
